--- a/mindqalam/src/componenets/BrowseThoughts/BrowseThoughts.css
+++ b/mindqalam/src/componenets/BrowseThoughts/BrowseThoughts.css
@@ -3,3 +3,28 @@
   flex-direction: column;
   align-items: center;
 }
+.thoughts-list-title {
+  margin-top: 35px;
+  /* font-size: 30px; */
+  font-weight: 400;
+  text-align: center;
+}
+
+.thoughts-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.left-arrow-btn,
+.right-arrow-btn {
+  padding: 0;
+  margin-left: 30px;
+  margin-bottom: 60px;
+  width: 50px;
+  height: 50px;
+  color: rgb(0, 172, 224);
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+}
