--- a/mindqalam/src/componenets/NavBar/NavBar.css
+++ b/mindqalam/src/componenets/NavBar/NavBar.css
@@ -1,15 +1,45 @@
 .nav-bar {
+  margin: 20px 0;
   display: flex;
   gap: 10px;
 }
-.nav-bar button {
-  font-size: 17px;
-  height: 35px;
-  border-radius: 10px;
-  border: 1px solid rgb(175, 175, 175);
-  font-weight: 400;
-  background-color: white;
-  margin-top: 30px;
+
+.button-26 {
+  background: #fff;
+  border: 2px solid #888;
+  font-size: 18px;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  border-radius: 10px;
+  outline: none;
+  padding: 0;
+  text-decoration: none;
+  /* width: fit-content; */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15), 5px 14px 20px rgba(0, 0, 0, 0.15);
+  transition: all 0.1s ease-in-out;
+}
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px 40px;
+  border-radius: 8px;
+  /* width: 100px; */
+  /* min-width: fit-content; */
+  box-shadow: inset 0 -6px #d5d7de, 0 -2px #ffffff;
+  transition: all 0.1s ease-in-out;
+}
+.button-26__text {
+  color: #888;
+  display: block;
+  transform: translate3d(0, -4px, 0);
+  transition: all 0.1s ease-in-out;
+}
+.button-26:active {
+  box-shadow: none;
+}
+.button-26:active .btn {
+  box-shadow: none;
+}
+.button-26:active .button-26__text {
+  transform: translate3d(0, 0, 0);
 }
