--- a/mindqalam/src/componenets/BrowseThoughts/BrowseThoughts.css
+++ b/mindqalam/src/componenets/BrowseThoughts/BrowseThoughts.css
@@ -28,3 +28,14 @@
   font-family: "Roboto", sans-serif;
   cursor: pointer;
 }
+
+.forgotten-thought {
+  /* Apply a blur effect */
+  filter: blur(5px);
+  transition: filter 0.3s ease; /* Smooth transition for the blur effect */
+}
+
+.forgotten-thought:hover {
+  /* Remove the blur effect on hover */
+  filter: blur(0);
+}
