--- a/mindqalam/src/componenets/Dashboard/Dashboard.css
+++ b/mindqalam/src/componenets/Dashboard/Dashboard.css
@@ -1,16 +1,20 @@
+:root {
+  --containers-color: #0000004b;
+}
+
 .dashboard-container {
   width: 1000px;
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #f8f8f838;
-  border: 2px solid #ddd;
+  background-color: #f8f8f827;
+  border: 2px solid #dddddd52;
   overflow: hidden;
   justify-content: center;
   align-items: center;
   border-radius: 20px;
   padding: 0 0 20px 0;
-  margin: 10px 0;
+  margin: 10px 0 20px 0;
 }
 
 .dashboard-title {
@@ -24,7 +28,7 @@
 }
 
 .boxing {
-  border: 2px solid #ddd;
+  border: 2px solid #dddddd56;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15), 5px 14px 20px rgba(0, 0, 0, 0.15);
 }
@@ -40,7 +44,7 @@
 }
 
 .thoughts-stats-container {
-  background-color: rgba(169, 189, 189, 0.212);
+  background-color: var(--containers-color);
   width: 30%;
   height: 220px;
   width: 350px;
@@ -62,7 +66,7 @@
   text-align: center;
   height: 220px;
   width: 350px;
-  background-color: rgba(214, 214, 214, 0.233);
+  background-color: var(--containers-color);
 }
 
 .total-feelings {
@@ -73,7 +77,7 @@
   width: 100%;
   height: fit-content;
   /* border-bottom: 2px solid #ddd; */
-  margin: 35px 0 20px 0;
+  margin: 15px 0 5px 0;
   /* border-top: 2px solid #ddd; */
 }
 
@@ -95,25 +99,27 @@
   flex-direction: column;
   width: 350px;
   /* min-height: 220px; */
-  background-color: #7e7e7e2c;
+  background-color: var(--containers-color);
   /* border-bottom: 2px solid #ddd; */
   /* margin: 20px 0; */
 }
 
-.feel-content {
+.feel-content-positive,
+.feel-content-negative {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   width: fit-content;
-  background-color: rgba(0, 255, 255, 0.164);
+  background-color: rgba(0, 255, 255, 0.486);
   margin: 5px 0;
   border-radius: 20px;
   height: 45px;
   padding: 10px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+  border: 2px solid #fdfdfd56;
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
 }
 
 .feelings-display {
@@ -124,29 +130,44 @@
   gap: 15px;
   flex-wrap: wrap;
   width: 100%;
+  padding: 10px;
 }
 
 .number-span {
   font-size: 15px;
-  background-color: rgba(197, 239, 255, 0.178);
-  border-radius: 15px;
+  background-color: rgba(151, 151, 151, 0.26);
+  border-radius: 10px;
   width: 25px;
   text-align: center;
   padding: 5px;
   margin: 2px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+  box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
+.positive-stats {
+  border: 2px solid rgba(114, 255, 142, 0.281);
+}
+
+.negative-stats {
+  border: 2px solid #ff81813d;
+}
+
+.feel-content-positive {
+  background-color: rgba(114, 255, 142, 0.281);
+}
+
+.feel-content-negative {
+  background-color: #ff81813d;
+}
 .positive-stats,
 .negative-stats {
-  background-color: rgba(122, 255, 233, 0.288);
-  border-radius: 15px;
+  border-radius: 10px;
   padding: 10px;
   margin: 10px;
   width: 70%;
   text-align: center;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+  box-shadow: rgba(170, 170, 170, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
@@ -167,7 +188,7 @@
   flex-direction: column;
   gap: 20px;
   margin: 20px 0;
-  background-color: rgba(211, 211, 211, 0.445);
+  background-color: var(--containers-color);
 }
 
 .lastest-thought-title {
@@ -178,5 +199,9 @@
   width: 700px;
   text-align: center;
   height: fit-content;
-  margin: 0 0 30px 0;
+  margin: 0 0 20px 0;
+}
+
+.mood-pos-neg {
+  color: rgb(0, 255, 0);
 }
