--- a/mindqalam/src/componenets/NavBar/NavBar.css
+++ b/mindqalam/src/componenets/NavBar/NavBar.css
@@ -4,42 +4,80 @@
   gap: 10px;
 }
 
-.button-26 {
-  background: #fff;
+.button-nav {
+  background: #ffffffa1;
   border: 2px solid #888;
-  font-size: 18px;
+  font-size: 20px;
   cursor: pointer;
   border-radius: 10px;
   outline: none;
   padding: 0;
   text-decoration: none;
-  /* width: fit-content; */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15), 5px 14px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 10px rgba(112, 64, 64, 0.15),
+    5px 14px 20px rgba(0, 0, 0, 0.15);
   transition: all 0.1s ease-in-out;
 }
+
+.button-nav-dark {
+  background: #5f0808a1;
+  border: 2px solid #3f2424;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 10px;
+  outline: none;
+  padding: 0;
+  text-decoration: none;
+  box-shadow: 0 2px 10px rgba(100, 16, 16, 0.15),
+    5px 14px 20px rgba(80, 17, 17, 0.39);
+  transition: all 0.1s ease-in-out;
+}
+
 .btn {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 24px 40px;
+  padding: 10px 10px;
   border-radius: 8px;
-  /* width: 100px; */
-  /* min-width: fit-content; */
-  box-shadow: inset 0 -6px #d5d7de, 0 -2px #ffffff;
-  transition: all 0.1s ease-in-out;
+  background-color: rgba(255, 255, 255, 0.247);
+  box-shadow: inset 0 -6px #969696, 0 -2px #35353593;
+  font-weight: 400;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
-.button-26__text {
-  color: #888;
+.btn-dark {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 10px;
+  border-radius: 8px;
+  background-color: rgba(184, 146, 146, 0.247);
+  box-shadow: inset 0 -6px #8a5757, 0 -2px #4b232393;
+  font-weight: 400;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.button-text {
+  font-weight: 600;
+  font-size: 16px;
+  color: #535353;
   display: block;
   transform: translate3d(0, -4px, 0);
   transition: all 0.1s ease-in-out;
 }
-.button-26:active {
+.button-text-dark {
+  font-weight: 600;
+  font-size: 16px;
+  color: #ff6767;
+  display: block;
+  transform: translate3d(0, -4px, 0);
+  transition: all 0.1s ease-in-out;
+}
+.button-nav:active {
   box-shadow: none;
 }
-.button-26:active .btn {
+.button-nav:active .btn {
   box-shadow: none;
 }
-.button-26:active .button-26__text {
+.button-nav:active .button-text {
   transform: translate3d(0, 0, 0);
 }
