--- a/mindqalam/src/componenets/Thought/Thought.css
+++ b/mindqalam/src/componenets/Thought/Thought.css
@@ -18,7 +18,7 @@
   justify-content: space-around;
   width: 100%;
   height: 60px;
-  background-color: rgb(248, 248, 248);
+  background-color: rgba(248, 248, 248, 0.377);
 }
 
 .thought-content {
@@ -41,22 +41,23 @@
   justify-content: space-around;
   width: 100%;
   height: 50px;
-  background-color: rgb(248, 248, 248);
+  background-color: rgba(255, 255, 255, 0.226);
+  column-gap: 10px;
 }
 
-button {
+.thought-actions button {
   font-size: 15px;
   height: 25px;
   border-radius: 10px;
   border: 1px solid rgb(175, 175, 175);
   font-weight: 400;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.247);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
 
 .forget-thought-btn:hover {
-  background-color: rgb(238, 255, 160);
+  background-color: rgba(209, 209, 209, 0.219);
   color: sienna;
   transition: all 0.3s ease-in-out;
 }
@@ -64,4 +65,15 @@ button {
   color: red;
   background-color: rgb(22, 21, 24);
   transition: all 0.3s ease-in-out;
+}
+
+.forgotten-thought {
+  /* Apply a blur effect */
+  filter: blur(5px);
+  transition: filter 0.3s ease; /* Smooth transition for the blur effect */
+}
+
+.forgotten-thought:hover {
+  /* Remove the blur effect on hover */
+  filter: blur(0);
 }
