--- a/mindqalam/src/componenets/GaugeMeter/GaugeMeter.css
+++ b/mindqalam/src/componenets/GaugeMeter/GaugeMeter.css
@@ -25,11 +25,11 @@
 }
 
 .gauge-needle {
-  width: 0; /* No width, as we will use borders to create the shape */
-  height: 0; /* No height, as we will use borders to create the shape */
-  border-left: 5px solid transparent; /* Left border, half the base width of the needle */
-  border-right: 5px solid transparent; /* Right border, half the base width of the needle */
-  border-bottom: 90px solid rgb(90, 90, 90); /* Bottom border, height and color of the needle */
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 90px solid rgb(90, 90, 90);
   position: absolute;
   bottom: 0;
   left: 50%;
